# vesta

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  AGENTS.md  Accabadora.epub  CLAUDE.md  COMPARISON.md  COMPETITORS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENT_CREATION_GUIDE.md  Dockerfile  LICENSE  MEMORY.md  MEMORY.md.backup  MEMORY.md.tmp  MEMORY_backup.md  QUICK_REFERENCE_SESSION_RESUMPTION.md  README.md  REFACTOR_PLAN.md  SESSION_RESUMPTION_INDEX.md  SESSION_RESUMPTION_INVESTIGATION.md  SPEC.md  SYSTEM_PROMPT.md  add_keyword_only_args.py  beirut_port_article.md  broken_tools.md  bump.sh  check.sh  create_article_pdf.py  create_reminder.py  install.ps1  install.sh  lorient_article.html  lorient_today_article.txt  main.py  morning_briefing.md  package-lock.json  (+18 more)
agent/: .gitignore  MEMORY.md  generate-manifest.py  generate-skills-index.py  pyproject.toml  pytest.ini  ruff.toml  skills-index.json  ty.toml
agent/cc_sdk/: README.md  _claude_bin.py  _forward.py  _mcp_stdio.py  bridge.py  client.py  mcp.py  messages.py  tmux.py  transcript.py  types.py
agent/core/: api.py  app_chat_intake.py  claude_runtime.py  client.py  codex_proxy.py  config.py  default-skills.txt  default_skills.py  defaults.json  diagnostics.py  events.py  helpers.py  init.py  lifecycle.py  logger.py  loops.py  main.py  manifest.json  migrations.py  model_access.py  models.py  notification.py  notification_interrupt_policy.py  openrouter_cache.py  openrouter_proxy.py  personalities.py  provider.py  pyproject.toml  sdk_parsing.py  state_store.py  stream_preview.py  tools.py  triage.py  upgrade_sync.py  upstream_sync.py  vestad_client.py  whatsmeow_freshness.py  workspace_sync.py
agent/core/cc_sdk/: README.md  __init__.py  _claude_bin.py  _forward.py  _mcp_stdio.py  bridge.py  client.py  mcp.py  messages.py  tmux.py  transcript.py  types.py
agent/core/migrations/: 2026-05-legacy-catchup.md  2026-05-restart-skill.md  2026-06-account-default-skill.md  2026-06-personality-autoload.md  2026-06-personality-out-of-core.md  2026-06-rename-overgeneric-skills.md  2026-06-service-default-skill.md  2026-06-workspace-resync.md  2026-07-agent-branch-workspace.md  2026-07-app-chat-channelization.md  2026-07-app-chat-out-of-core.md  2026-07-contacts-backfill.md  2026-07-contacts-reminder-to-dream.md  2026-07-dashboard-reflow.md  2026-07-dashboard-self-heal.md  2026-07-editable-skill-installs.md  2026-07-google-skill-byo-client.md  2026-07-handover-deps.md  2026-07-manual-upstream-review.md  2026-07-memory-open-questions.md  2026-07-rename-account-skill.md  2026-07-tasks-restart-guard.md  2026-07-tasks-serve-port.md  2026-07-vestad-skill.md  2026-07-whatsapp-live-build.md  2026-08-flat-checkout.md  (+4 more)
agent/memory/: MEMORY.md
agent/prompts/: dream.md  first_start.md  first_start_greeting.md  first_start_setup.md  migration.md  nightly_dream.md  notification_suffix.md  proactive_check.md  restart.md  router.md
agent/scripts/: backup-daemon.sh  backup.sh  event-tagger.py  ups-monitor.py
agent/skills/: default-skills.txt  generate-index.py  index.json
agent/tests/: conftest.py  e2e.py  fake_claude.py  test_api.py  test_app_chat_intake.py  test_boot_turns.py  test_build_upstream.py  test_build_workspace.py  test_cc_sdk.py  test_check_conventions.py  test_client_reset.py  test_codex_proxy.py  test_config.py  test_constitution.py  test_contract.py  test_crash_recovery.py  test_dashboard_builder.py  test_dashboard_daemon.py  test_default_skills.py  test_deployment.py  test_dreamer.py  test_e2e.py  test_e2e_transport.py  test_event_union_fixture.py  test_eventbus.py  test_formatting.py  test_interrupts.py  test_logger.py  test_manifest.py  test_migrations.py  test_notif_pool_triage.py  test_notif_rules_skill.py  test_notif_snooze.py  test_notification_interrupt_policy.py  test_notification_interrupt_rules_api.py  test_notification_interrupt_rules_skill.py  test_notification_rules.py  test_notification_unreadable_entry.py  test_notifications.py  test_openrouter.py  (+32 more)
agent/webapp/: index.html  manifest.json  serve.py
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
cli/: Cargo.toml
cli/src/: client.rs  common.rs  linux.rs  macos.rs  main.rs  windows.rs
cli/tests/: extract.rs
cli/vesta/: Cargo.toml
cli/vestad/: Cargo.toml
cli/vm/: Dockerfile  build-vm-image.sh  build-wsl-rootfs.sh  entrypoint.sh
clis/microsoft/: .env.backup  .gitignore  authenticate.py  pyproject.toml
clis/reminder/: pyproject.toml
clis/task/: README.md  pyproject.toml
clis/todo/: README.md  pyproject.toml
clis/what-day/: README.md  pyproject.toml
clis/zoom/: pyproject.toml
mcps/reminder-mcp/: .env.example  README.md  pyproject.toml
mcps/scheduler-mcp/: README.md  create_banana_reminder.py  migrate_to_sqlite.py  pyproject.toml  simple_reminder.py
mcps/task-mcp/: .env.example  README.md  pyproject.toml
mcps/what-day-mcp/: pyproject.toml
mcps/whatsapp-mcp/: .env.example  REACTIONS.md  pyproject.toml
tests/: Cargo.toml  README.md  e2e.py  test_client_reset.py  test_unit.py
tests/src/: client.rs  lib.rs  types.rs
tests/tests/: live.rs  multi_user.rs  oauth.rs  server.rs  upgrade.rs
vesta-common/: Cargo.toml
vesta-common/src/: client.rs  lib.rs
vesta-common/tests/: config.rs  harness.rs  server.rs
vestad/: AGENT-CODE-FLOW.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dockerignore  build.rs  claude-code-proxy.env  package-lock.json
vestad/scripts/: build-upstream.sh  build-workspace.sh
vestad/src/: agent_auth.rs  agent_code.rs  agent_embed.rs  agent_provider.rs  agent_proxy.rs  agent_status.rs  app_static.rs  auth.rs  backup.rs  channel.rs  cloudflared_embed.rs  control_ws.rs  defaults.rs  docker.rs  jwt.rs  lifecycle.rs  main.rs  manifest.rs  migrations.rs  mobile_app.rs  mounts.rs  openrouter.rs  paths.rs  restic.rs  restic_embed.rs  self_log.rs  self_update.rs  serve.rs  service_proxy.rs  service_sessions.rs  settings.rs  state.rs  status.rs  systemd.rs  time_utils.rs  tunnel.rs  types.rs  update_check.rs  update_window.rs  upstream.rs  (+2 more)
vestad/tests-integration/: Cargo.toml  README.md
(+2331 files in other folders)
