[workspace]
members = ["cli", "vestad", "vesta-common"]
exclude = ["app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.105"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
