[workspace]
members = ["cli", "vestad", "vesta-common", "tests"]
exclude = ["app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.106"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
