[project]
name = "vesta"
version = "0.1.8"
description = "Personal assistant agent that works autonomously on your behalf"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.1",
    "claude-code-sdk>=0.0.25",
    "pillow>=11.3.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "toml>=0.10.2",
]

[project.scripts]
vesta = "vesta.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 144
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E702", "E731", "UP008", "E712"]
extend-select = ["UP"]

[tool.pyright]
include = [
    "src/vesta",
    "mcps/microsoft-mcp/src",
    "mcps/scheduler-mcp/src"
]
exclude = [
    "**/tests",
    "**/__pycache__",
    "**/.venv"
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
