[project]
name = "vesta"
version = "0.1.12"
description = "Personal assistant agent that works autonomously on your behalf"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.1",
    "claude-agent-sdk>=0.1.9",
    "pillow>=11.3.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "toml>=0.10.2",
]

[project.scripts]
vesta = "vesta.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.4",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["e2e.py", "test_*.py", "*_test.py"]
testpaths = ["tests"]


[tool.ruff]
line-length = 144
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E702", "E731", "UP008", "E712"]
extend-select = ["UP"]

[tool.pyright]
include = [
    "src/vesta",
    "mcps/microsoft-mcp/src",
    "mcps/scheduler-mcp/src"
]
exclude = [
    "**/tests",
    "**/__pycache__",
    "**/.venv"
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
