[project]
name = "vesta"
version = "0.1.158"
description = "Personal assistant agent that works autonomously on your behalf"
license = "MIT"
authors = [
    { name = "elyxlz" }
]
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.2",
    "aiohttp>=3.14.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "watchfiles>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/elyxlz/vesta"
Repository = "https://github.com/elyxlz/vesta"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "pytest>=9.0.3",
    "pytest-timeout>=2.3.1",
    "hypothesis>=6.131.0",
    "ty>=0.0.42",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
pythonpath = [".", "skills"]
# Per-test hard timeout: a hung async test fails fast instead of hanging CI until the job timeout.
timeout = 120


[tool.ty.src]
include = ["core", "tests"]

[tool.ty.environment]
extra-paths = ["skills", "core/skills/app-chat/cli/src"]

[tool.ruff]
line-length = 144
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402", "E702", "E731", "UP008", "E712"]
extend-select = ["UP"]
