[package]
name = "vesta"
version = "0.1.147"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"
description = "Vesta CLI for managing personal assistant agents"

[[bin]]
name = "vesta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
ureq = { version = "3", features = ["json", "rustls"] }
rustls = "0.23"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
self-replace = "1"
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
