[package]
name = "vesta"
version = "0.1.179"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"
description = "Vesta CLI for managing AI guardian angel agents"

[[bin]]
name = "vesta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "3", features = ["json", "rustls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
self-replace = "1"
percent-encoding = "2"

[dev-dependencies]
proptest = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

# Lint escapes (#[allow]/#[expect]) are banned repo-wide; tune rules here instead.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# API-doc ceremony and display-only casts: not worth the churn for an internal binary.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
unwrap_used = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
