[package]
name = "vesta-tests"
version.workspace = true
edition.workspace = true
publish = false

[features]
integration = []

[dependencies]
vesta-common = { path = "../vesta-common" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["__rustls-tls"] }
rustls = "0.23"
ring = "0.17"
