[package]
name = "vesta-tests"
version.workspace = true
edition.workspace = true
publish = false

[features]
integration = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "rustls"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["__rustls-tls"] }
rustls = "0.23"
ring = "0.17"
