[package]
name = "vesta-common"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared types, config, and platform setup for Vesta"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = { version = "3", features = ["json", "rustls"] }
rustls = "0.23"
ring = "0.17"

[features]
integration = []

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio-tungstenite = { version = "0.29", features = ["__rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
zstd = "0.13"
tar = "0.4"
