[workspace]
members = [".", "tests-integration"]
resolver = "2"

[package]
name = "vestad"
version = "0.1.142"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"
description = "Vesta API server daemon (Linux only)"

[[bin]]
name = "vestad"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "process", "sync", "time", "fs", "net"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = "0.13"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
self-replace = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
bollard = "0.18"
tar = "0.4"
flate2 = "1"
tokio-util = { version = "0.7", features = ["io"] }
rust-embed = { version = "8", features = ["compression", "include-exclude", "debug-embed"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
