[workspace]
members = [".", "tests-integration"]
resolver = "2"

[package]
name = "vestad"
version = "0.1.158"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"
description = "Vesta API server daemon (Linux only)"

[[bin]]
name = "vestad"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "process", "sync", "time", "fs", "net"] }
tokio-tungstenite = "0.29"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = "0.14"
ring = "0.17"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.10"
self-replace = "1"
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
bollard = "0.21"
tar = "0.4"
flate2 = "1"
tokio-util = { version = "0.7", features = ["io"] }
rust-embed = { version = "8", features = ["compression", "include-exclude", "debug-embed"] }
mime_guess = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
proptest = "1"
# Integration/live e2e tests live here (in vestad's own tests/) so `cargo test -p vestad
# --test <name>` builds the vestad binary and exposes its path via CARGO_BIN_EXE_vestad —
# no separate build step, no stale-binary risk. They reuse the shared harness from vesta-tests.
vesta-tests = { path = "tests-integration" }
ctor = "0.2"
# Used directly by the integration suites (vestad's own deps cover tokio/rustls/ring/serde_json).
ureq = { version = "3", features = ["json", "rustls"] }

# Integration suites need a real Docker daemon; live also needs Claude credentials. Bare
# `cargo test -p vestad` would run them too, so the unit-test path uses `--bins`; select a
# suite with `--test <name>` (see check.sh).
[[test]]
name = "server"
path = "tests/server/mod.rs"

[[test]]
name = "multi_user"
path = "tests/multi_user/mod.rs"

[[test]]
name = "live"
path = "tests/live/mod.rs"

[[test]]
name = "oauth"
path = "tests/oauth/mod.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
