[project]
name = "vesta"
version = "0.1.168"
description = "Personal assistant agent that works autonomously on your behalf"
license = "MIT"
authors = [
    { name = "elyxlz" }
]
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.2",
    "aiohttp>=3.14.1",
    "claude-agent-sdk>=0.2.110",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "watchfiles>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/elyxlz/vesta"
Repository = "https://github.com/elyxlz/vesta"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=9.1.1",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.155.7",
    "ty>=0.0.56",
]
