[package]
name = "vesta-app"
version = "0.1.62"
description = "Vesta desktop app"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"

[lib]
name = "vesta_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "fs", "time"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.6"
