[package]
name = "vesta-app"
version = "0.1.110"
description = "Vesta desktop app"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"

[lib]
name = "vesta_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
