[package]
name = "vesta"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
description = "Vesta CLI for managing personal assistant agents"

[[bin]]
name = "vesta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "3", features = ["json", "rustls"] }
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
self-replace = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
zstd = "0.13"
tar = "0.4"
