[project]
name = "reminder"
version = "0.1.0"
description = "Reminder CLI for time-based notifications and recurring reminders"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.0",
]

[project.scripts]
reminder = "reminder_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reminder_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
