[project]
name = "task"
version = "0.1.0"
description = "Task management CLI with priority tracking and due dates"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
task = "task_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
