[project]
name = "todo"
version = "0.1.0"
description = "Todo management CLI with priority tracking and due dates"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
todo = "todo_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
