[project]
name = "what-day"
version = "0.1.0"
description = "Date to day-of-week conversion CLI"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
what-day = "what_day_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/what_day_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
