[project]
name = "scheduler-mcp"
version = "0.1.0"
description = "Scheduler MCP for setting reminders and timed notifications"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
scheduler-mcp = "scheduler_mcp.server:main"

[dependency-groups]
dev = [
    "mcp>=1.9.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
