[project]
name = "task-mcp"
version = "0.1.0"
description = "Task management MCP with priority tracking and due dates"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
task-mcp = "task_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
