[project]
name = "whatsapp-mcp"
version = "0.1.0"
description = "WhatsApp MCP server for sending messages, managing chats, and interacting with WhatsApp"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "pywhispercpp>=1.3.0",
]

[project.scripts]
whatsapp-mcp = "whatsapp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
