[package]
name = "vesta-tests"
version = "0.1.140"
edition = "2021"
publish = false

[features]
integration = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "rustls"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["__rustls-tls"] }
rustls = "0.23"
ring = "0.17"

[[test]]
name = "server"
path = "tests/server/mod.rs"

[[test]]
name = "multi_user"
path = "tests/multi_user/mod.rs"

[[test]]
name = "live"
path = "tests/live/mod.rs"

[[test]]
name = "oauth"
path = "tests/oauth/mod.rs"

[[test]]
name = "migrations"
path = "tests/migrations/mod.rs"
