# Shared test harness only (TestServer, TestAgent, docker helpers, client). The actual
# integration/live test suites live in `vestad/tests/` so cargo builds the vestad binary for
# them (CARGO_BIN_EXE_vestad); vestad dev-depends on this crate for the harness.
[package]
name = "vesta-tests"
version = "0.1.172"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "rustls"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["__rustls-tls"] }
rustls = "0.23"
ring = "0.17"
