[package]
name = "vesta-app"
version = "0.1.143"
description = "Vesta desktop app"
license = "MIT"
repository = "https://github.com/elyxlz/vesta"
authors = ["elyxlz"]
edition = "2021"

[lib]
name = "vesta_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
objc2 = "0.6"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
