[project]
name = "account"
version = "0.1.0"
description = "Vesta account CLI — read this box's hosting plan and facilitate billing changes via a server-identity token (issue #20)"
readme = {text = "", content-type = "text/plain"}
authors = [
    { name = "elyxlz" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
account = "account_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/account_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
