[project]
name = "agentmail"
version = "0.1.0"
description = "CLI for the agentmail skill"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
agentmail = "agentmail.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmail"]
