[project]
name = "agentmail-bridge"
version = "0.1.0"
description = "Vesta-side bridge to the official AgentMail CLI/SDK"
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
agentmail = "agentmail_bridge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmail_bridge"]
