[project]
name = "app-chat-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]

[project.scripts]
app-chat = "app_chat_cli:main"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/app_chat_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
